[tool.poetry]
name = "dashboard"
version = "0.1.0"
description = "Enterprise Call Management Analytics Hub"
authors = ["Your Name <you@example.com>"]
package-mode = false # 👈 ADD THIS EXACT LINE HERE

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.58.0"
pandas = "^3.0.3"
# ... your other dependencies continue below